@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class GameCharacter {
        + GameCharacter()
        + getView()
        + toggleJumpMode()
        + updatePosition()
    }
  }
  

  namespace  {
    class GamePanel {
        + height : int
        + width : int
        - g : Graphics2D
        - ground : int
        - image : BufferedImage
        - justResumed : boolean
        - keyPressed : HashMap<Integer, Boolean>
        - life : int
        - obstacleList : ArrayList<Obstacle>
        - paused : boolean
        - powerUpList : ArrayList<PowerUpView>
        - running : boolean
        - score : long
        - targetFPS : int
        - targetTime : long
        - thread : Thread
        - timeInAirWhenPaused : long
        + GamePanel()
        + addNotify()
        + init()
        + keyPressed()
        + keyReleased()
        + keyTyped()
        + mouseClicked()
        + mouseEntered()
        + mouseExited()
        + mousePressed()
        + mouseReleased()
        + run()
        - checkCollision()
        - checkIfAnyPointsEarned()
        - checkIfPowerUpAcquired()
        - drawToScreen()
        - pause()
        - play()
        - registerKeyEvent()
    }
  }
  

  namespace  {
    class Main {
        {static} + main()
    }
  }
  

  GameCharacter -up-|> modal.jump.Actor
  GameCharacter o-- view.CharacterView : characterView
  GameCharacter o-- modal.jump.JumpBehaviour : nextJumpBehavior
  GamePanel .up.|> java.awt.event.KeyListener
  GamePanel .up.|> java.awt.event.MouseListener
  GamePanel .up.|> java.lang.Runnable
  GamePanel -up-|> javax.swing.JPanel
  GamePanel o-- view.Background : background
  GamePanel o-- GameCharacter : character
  GamePanel o-- view.Obstacle : lastCollided
  GamePanel o-- view.Obstacle : lastPassed
  GamePanel o-- common.Log : log
  GamePanel o-- modal.powerup.Multiplier : multiplier
  GamePanel o-- view.PauseButton : pauseButton


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
